Fix top-tabs z-index

--- a/app/assets/stylesheets/plans.css.scss
+++ b/app/assets/stylesheets/plans.css.scss
@@ -85,20 +85,21 @@ $bgc-white:           #fefefe;
   padding-top: 13px;
 }
 
-.top-tabs > li > a:hover {
-  background-color: #a0a0a0;
-  color: #eeeeee;
-}
-
-.top-tabs > li.active > a {
-  background-color: $dark-color;
-  color: #eeeeee;
-  &:hover {
-    background-color: $dark-color;
+.top-tabs {
+  z-index: 20;
+  > li > a:hover {
+    background-color: #a0a0a0;
     color: #eeeeee;
   }
+  > li.active > a {
+    background-color: $dark-color;
+    color: #eeeeee;
+    &:hover {
+      background-color: $dark-color;
+      color: #eeeeee;
+    }
+  }
 }
-
 #myplans {
   padding-top: 13px;
 }
